--- a/index.html
+++ b/index.html
@@ -62,6 +62,62 @@
                 </div>
 
             </section>
+
+
+            <section class="second-section">
+                <h1>••• Services •••</h1>
+
+                <div class="services">
+                    <div class="box">
+                        <div class="img">
+                            <img src="img2/11.jpg">
+                        </div>
+                        <div class="text">
+                            <h2>Ritu Gupta</h2>
+                            <p>Made on arms, wrists, around the navel, shoulder and the back. Mehendi is also being used as body art.</p>
+                            <button>Enquire Now</button>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="img">
+                            <img src="img2/11.jpg">
+                        </div>
+                        <div class="text">
+                            <h2>Monika Bairwa</h2>
+                            <p>Random figures, patterns of animals, images of anything, everthing just appears attractive and beautiful..</p>
+                            <button>Enquire Now</button>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="img">
+                            <img src="img2/11.jpg">
+                        </div>
+                        <div class="text">
+                            <h2>Rakhi Bairwa</h2>
+                            <p>Mehendi is considered auspicious in indian traditions in all cultures, we have artists for all your needs.</p>
+                            <button>Enquire Now</button>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="img">
+                            <img src="img2/11.jpg">
+                        </div>
+                        <div class="text">
+                            <h2>Heena </h2>
+                            <p>Enjoyable skill that can earn you income for years to come. More the practice better is the perfection..</p>
+                            <button>Enquire Now</button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </section>
+
+            <section class="thred-section">
+                
+            </section>
         </main>
 
         <script src="script.js"></script>
