--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="services">
                     <div class="box">
                         <div class="img">
-                            <img src="img2/11.jpg">
+                            <img src="./10.jpg">
                         </div>
                         <div class="text">
                             <h2>Ritu Gupta</h2>
@@ -81,7 +81,7 @@
 
                     <div class="box">
                         <div class="img">
-                            <img src="img2/11.jpg">
+                            <img src="./15.jpg">
                         </div>
                         <div class="text">
                             <h2>Monika Bairwa</h2>
@@ -92,7 +92,7 @@
 
                     <div class="box">
                         <div class="img">
-                            <img src="img2/11.jpg">
+                            <img src="./19.jpg">
                         </div>
                         <div class="text">
                             <h2>Rakhi Bairwa</h2>
@@ -103,7 +103,7 @@
 
                     <div class="box">
                         <div class="img">
-                            <img src="img2/11.jpg">
+                            <img src="./55.jpg">
                         </div>
                         <div class="text">
                             <h2>Heena </h2>
@@ -115,8 +115,16 @@
                 </div>
             </section>
 
+
+
             <section class="thred-section">
-                
+                <div class="about-first">
+<h1>••• About Us •••</h1>
+<p>Mehendi is the art of painting the body in ornate designs with henna, associated with transformation and transcendence. We, dummy company situated at area, city, state, provide beautiful mehendi designs as a trendy alternative to tattoos. We are proud to be able to evolve from the traditional patterns of mehendi into more and more intricate and decorative designs in time. The unique designs and intricacy of the mehendi makes it an outstanding work of art.</p>
+                </div>
+                <div class="about-second">
+
+                </div>
             </section>
         </main>
 
